--- a/resources/public/main.css
+++ b/resources/public/main.css
@@ -1,19 +1,28 @@
-html { font-family: sans-serif;
+html { font-family: Helvetica, sans-serif;
        background-color: white; /* for those with strange default color ;-) */}
-body { margin: 0; }
+body { margin: 0; font-size: 1rem; }
 img { border: 0; }
 header, #content { margin: 0 auto; width: 90%; }
-header h1 { margin: 0.3em 5%; font-size: 3em;
+header h1 { margin: 0.3em 5%; font-size: 2em;
             font-family: Helvetica, sans-serif; }
 h1 a, h2 a, h3 a { text-decoration: none; color: black; }
-p { line-height: 1.2em; }
+
+/*** Layout */
+
+html { height: 100%; }
+body { min-height: 100%; }
+.flex { display: flex; }
+.flexv { display: flex; flex-direction: column; }
+.unit { flex: 1; }
+footer { display: flex; justify-content: center; }
+
 
 .hot { cursor: pointer; text-decoration: none; border-bottom: dashed; border-width: 1px;
        padding-top: 1px; color: black; }
 .hot.selected { border-bottom: none; }
 
 input[type="submit"] { font-size: 1.5em; width: 5em; }
-#text { width: 100%; height: 20em; margin: 0.5em 0; border-radius: 5px; }
+#text { display: block; margin: 0.5em 0; border-radius: 5px; }
 
 textarea, .line, .code {
     font-family: Monaco, Consolas, 'Courier New', monospace; font-size: 0.8em; }
@@ -43,10 +52,8 @@ table { border-spacing: 0;
 .note { color: grey; padding: 0.1em 0.5em; }
 .right { float: right; }
 
-#footer { border-top: solid 1px; background-color: #f5f5f5; margin: 1em 0 0 0;
-          padding: 0.5em; }
-#footer p { text-align: right; margin: auto 2em; }
-#footer a { color: black; }
+footer { border-top: solid 1px; background-color: #f5f5f5; margin: 1em 0 0 0; }
+footer a { color: black; }
 
 /* Wrapping */
 
