--- a/resources/public/main.css
+++ b/resources/public/main.css
@@ -25,7 +25,7 @@ input[type="submit"] { font-size: 1.5em; width: 5em; }
 #text { display: block; margin: 0.5em 0; border-radius: 5px; }
 
 textarea, .line, .code {
-    font-family: Monaco, Consolas, 'Courier New', monospace; font-size: 0.8em; }
+    font-family: Monaco, Consolas, Menlo, 'Courier New', monospace; font-size: inherit;}
 
 table { border-spacing: 0;
         border-collapse: collapse;
@@ -48,7 +48,8 @@ table { border-spacing: 0;
 .selecting { background-color: #b0b0fa; }
 
 .meta { background-color: #f5f5f5; padding: 0.5em;
-        border-top: 1px dashed #bbb; border-bottom: 1px dashed #bbb; }
+        border-top: 1px dashed #bbb; border-bottom: 1px dashed #bbb;
+        white-space: nowrap; overflow: scroll; }
 .note { color: grey; padding: 0.1em 0.5em; }
 .right { float: right; }
 
