--- a/resources/public/main.css
+++ b/resources/public/main.css
@@ -3,8 +3,7 @@ html { font-family: Helvetica, sans-serif;
 body { margin: 0; font-size: 1rem; }
 img { border: 0; }
 header, #content { margin: 0 auto; width: 90%; }
-header h1 { margin: 0.3em 5%; font-size: 2em;
-            font-family: Helvetica, sans-serif; }
+h1, h2, h3 { margin: 0.3rem 0; }
 h1 a, h2 a, h3 a { text-decoration: none; color: black; }
 
 /*** Layout */
@@ -24,7 +23,7 @@ footer { display: flex; justify-content: center; }
 input[type="submit"] { font-size: 1.5em; width: 5em; }
 #text { display: block; margin: 0.5em 0; border-radius: 5px; }
 
-textarea, input, .line, .code {
+textarea, input, .line, .code, code {
     font-family: Monaco, Consolas, Menlo, 'Courier New', monospace; font-size: inherit;}
 
 table { border-spacing: 0;
@@ -60,3 +59,8 @@ footer a { color: black; }
 
 .wrap .line, .wrap .note { display: none; }
 .wrap .code { white-space: pre-wrap; }
+
+/* About */
+
+.about { line-height: 1.5em; }
+.about code { background-color: #f2f2f2; font-size: 85%; padding: .2em .3em; }
